Bug 92582 - spellcheck preview not updated
Summary: spellcheck preview not updated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Marek Dolezel
URL: https://www.youtube.com/watch?v=XBjpA...
Whiteboard: target:5.1.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2015-07-06 22:20 UTC by Marek Dolezel
Modified: 2016-10-25 19:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marek Dolezel 2015-07-06 22:20:08 UTC
When you have several spelling errors in writer document and open spellcheck only the first item is shown in preview. When you click on "Correct" or "Ignore" preview is not updated for new item.

1. open writer document with spelling errors
2. run spellcheck dialog
3. click on correct or ignore button in dialog
4. see that preview is not updated for current item(misspelled word)

Version: 5.1.0.0.alpha1+
Build ID: 571f0abb95e1d4aa1cb7cad20b783b17ba7ac99d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-29_23:57:05
Locale: en-GB (en_GB.utf8)
OS: Fedora 22

See URL for video

Applies to writer,calc,drawimpress
Comment 1 Buovjaga 2015-07-07 10:43:32 UTC
Reproduced.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: 8b788891796ff0571f779cdbe8ce809c35c42754
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-02_23:09:27
Locale: fi-FI (fi_FI)
Comment 2 Marek Dolezel 2015-07-07 21:22:02 UTC
git bisect start 'latest' 'oldest'
# good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
# good: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
git bisect good 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
# good: [40875247f0002056effdf6d2fbe43627691cd86c] source-hash-93f0b14458a618ad575cd446680e5c4aa7d87bdc
git bisect good 40875247f0002056effdf6d2fbe43627691cd86c
# skip: [61f66b1a251477193d796411ca95f50d606ead45] source-hash-3fd5f8919ec2256c70ff26c14cb9f8065c5cb2f1
git bisect skip 61f66b1a251477193d796411ca95f50d606ead45
# good: [e7374cd735af2344dae55be40946d96633d2f6ee] source-hash-8a91528a3e03fe6e2923c33327b687ecf57adb0b
git bisect good e7374cd735af2344dae55be40946d96633d2f6ee
# skip: [541837707e7b0c5f5335180de535043c43e78e8d] source-hash-0811de12ee6727bbb9d4265217833ba02301eed8
git bisect skip 541837707e7b0c5f5335180de535043c43e78e8d
# skip: [20d3f5ee5caa4af37fc6c7f296ee06a8c5894bb5] source-hash-b34b648fc3262c5d9aa295f621e8fe9c97d4c6b2
git bisect skip 20d3f5ee5caa4af37fc6c7f296ee06a8c5894bb5
# skip: [c8528b44ca343e121f71f761b9a90df806857f4e] source-hash-21be3257d9d10f0f65c2ae49d7ef3beb81018bfc
git bisect skip c8528b44ca343e121f71f761b9a90df806857f4e
# skip: [4a7562d1a0764b61ed3b82f867748b38e7dbd682] source-hash-00094cd15165a7dbd0ca887c2e95b7afddc4ff52
git bisect skip 4a7562d1a0764b61ed3b82f867748b38e7dbd682
# good: [3898641141ffa38bd9d124e686ce75dc5a840be0] source-hash-80923ec9bef961e5102b65dd5a4722203729d7c0
git bisect good 3898641141ffa38bd9d124e686ce75dc5a840be0
# skip: [7ea366c031b603d062c4562c2885bc8bfda0e969] source-hash-6cbdd2a141d906d941831496e0e697823fac3753
git bisect skip 7ea366c031b603d062c4562c2885bc8bfda0e969
# skip: [8a683f00977c133d3c55e835a8243af097d19eed] source-hash-97b643ac862d0d6d0a305a7fd82fd20dfb3dbf72
git bisect skip 8a683f00977c133d3c55e835a8243af097d19eed
# skip: [1b50dd975f7532aebb5b337080649d9841a0b674] source-hash-f8b94e51c672eaa55bceaee2ceca72d8399b434b
git bisect skip 1b50dd975f7532aebb5b337080649d9841a0b674
# skip: [ef6be60d11aba21579b28b6ddbfa43a397767e86] source-hash-697d49cbb43c7d12bb88ba4f67dafe069cb1c5bd
git bisect skip ef6be60d11aba21579b28b6ddbfa43a397767e86
# skip: [d59d484850485d32f9000b4c1d8a6b7c6ddd01d8] source-hash-c2fac48373cab503c19aad00d1136053f82f3ae2
git bisect skip d59d484850485d32f9000b4c1d8a6b7c6ddd01d8
# good: [a79fa9e81bb9129d0382fdd38170054c720cf95d] source-hash-56a45fcfd0a881a31f94aa102fe5f03af32a00e1
git bisect good a79fa9e81bb9129d0382fdd38170054c720cf95d
# skip: [842014f84b116a3966500939be4eb2c0544c0707] source-hash-3bc76133106325e211b7e02c996dd6d040ca7354
git bisect skip 842014f84b116a3966500939be4eb2c0544c0707
# skip: [2a429bb6df66fd488773952a61cfa7ffcb352f52] source-hash-2feddc10430ee932df0414406d7200b57f50d632
git bisect skip 2a429bb6df66fd488773952a61cfa7ffcb352f52
# skip: [283c7513e2d2adfea44e35196d7767e85d332a1b] source-hash-579b9d92c4451f86469a62a4531b026358dd52c7
git bisect skip 283c7513e2d2adfea44e35196d7767e85d332a1b
# skip: [27b2690ce2dc2c4faf140150f455abc9c72103d2] source-hash-158614a2abc35d122e467d2006830f2c5375aa84
git bisect skip 27b2690ce2dc2c4faf140150f455abc9c72103d2
# skip: [2165f9ce92aea0146298dd495b29cb40f798eaa8] source-hash-c02f3174f7e5e6ed32379d727d4a362420a01d56
git bisect skip 2165f9ce92aea0146298dd495b29cb40f798eaa8
# skip: [23ed98368b8e5851aeaf5ada953a4197a0ce2d8a] source-hash-be88e305eeac88e51f83efc004d4b60b87f1e757
git bisect skip 23ed98368b8e5851aeaf5ada953a4197a0ce2d8a
# skip: [050fb28a03107ad98e60a867270f172198c0d387] source-hash-994b9700f824869ade12b16b8a2ebe333642e9ec
git bisect skip 050fb28a03107ad98e60a867270f172198c0d387
Comment 3 Marek Dolezel 2015-07-07 22:33:23 UTC
# bad: [136b8f86a09839b55e7c25e4cf82e439c496f3ce] 2015-07-07: source-hash-0251e61640b94094918406b33ee7b05564409feb
# good: [2b392af9c8f54629e3a3a98a8c92fa5af1c6722f] 2015-05-20: source-hash-90e2dabb8d0bb5382234be776c2ad0e2d5d9e224
git bisect start 'master' 'oldest'
# bad: [2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73] 2015-06-13: source-hash-a9286c302e96258f32d13fb66aced25750e82cd3
git bisect bad 2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73
# bad: [587d15ec717aed5d4abe657f3a96d4de29565bc7] 2015-06-01: source-hash-e61fcfea5c2a306e44a053976e921160e78917ac
git bisect bad 587d15ec717aed5d4abe657f3a96d4de29565bc7
# good: [991c3db554ae2f30bcc215ccbe090656d9970c02] 2015-05-26: source-hash-af75d7a4c99414fabbd31b9df590266d28574fb1
git bisect good 991c3db554ae2f30bcc215ccbe090656d9970c02
# bad: [04eea9ee476ef77555047447a98d1cc968f8a3c8] 2015-05-29: source-hash-ef2e135cfb8f107a154aaab9b54f2dfca0edf6a0
git bisect bad 04eea9ee476ef77555047447a98d1cc968f8a3c8
# bad: [7b138bcf32b52eccf484bd66d9ab5c70a7970805] 2015-05-28: source-hash-be01d68420086fc36ecf26b5f597ba7c6b29b369
git bisect bad 7b138bcf32b52eccf484bd66d9ab5c70a7970805
# good: [0c21dcaa08976385a72c7cd698a4474bcae7117a] 2015-05-27: source-hash-d56c1f7a20d8a95c88ea31c7f9000b8e270ab1ee
git bisect good 0c21dcaa08976385a72c7cd698a4474bcae7117a
# first bad commit: [7b138bcf32b52eccf484bd66d9ab5c70a7970805] 2015-05-28: source-hash-be01d68420086fc36ecf26b5f597ba7c6b29b369
Comment 4 Marek Dolezel 2015-07-12 14:18:29 UTC
This bug first appeared in this commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=77c47fc79c1c8096c19a81a0d320e75b84857144

Assigning to myself.
Comment 5 Commit Notification 2015-07-14 01:08:25 UTC
Marek Doležel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bd582834b46dbbc5037310d45bac8885e6f2a07

tdf#92582 Revert "tdf#91544: fix freezing of Data source window"

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2015-07-14 01:09:22 UTC
Thanks for your help and the fix!
Comment 7 Robinson Tryon (qubit) 2015-12-17 09:17:53 UTC Comment hidden (obsolete)