tdf#92582 Revert "tdf#91544: fix freezing of Data source window"

This reverts commit 77c47fc79c1c8096c19a81a0d320e75b84857144.

This doesn't reintroduce the original problem of tdf#91544.

Change-Id: Iee4d54e584cf098be70e8c49f9050d537567cf92